# YEYU_turtlebot3_pyqt_gui

./: package.xml  setup.cfg  setup.py
YEYU_turtlebot3_pyqt_gui/: TurtleBot3gui.py  gui.py  main.py  main_gui.py  main_gui.ui  qt_signals.py  ros_node.py  ros_worker.py  start_nav2.sh  stop_nav2.sh  temp_tub_plus_nav.py  tts_worker.py  tub_plus_nav.py  tub_plus_nav2.py
YEYU_turtlebot3_pyqt_gui/backup/: tub_plus_nav.py  tub_plus_nav2_morepre.py
YEYU_turtlebot3_pyqt_gui/backup/260708_수작업/: gui.py
YEYU_turtlebot3_pyqt_gui/reference/: audio_gui_publisher.py  nav2_waypoint_gui.py
config/: yeyu_waypoints2.yaml
docs/: README.md
maps/: yeyu_map1.pgm  yeyu_map1.yaml
resource/: turtlebot3_pyqt_gui2.ui
resource/backup/: turtlebot3_pyqt_gui2.ui  turtlebot3_pyqt_gui2_backup2_gtts바꾸기전.ui
src/YEYU_turtlebot3_pyqt_gui/: gui.py  main.py  ros_node.py
src/YEYU_turtlebot3_pyqt_gui/reference/: turtlebot3_burger_gui_node.py
